@@ -3,14 +3,19 @@ MD5 2a83abd77f66206363ac3fa342e75a3c files/libgpg-error-1.3-nls.patch 451
 RMD160 7fcbf426f9d60614bad24fda6bbdd68e42a39ec9 files/libgpg-error-1.3-nls.patch 451
 SHA256 8286b6c6a1a96cc9f6eadee13fac0ca4ab87d883f3907ff5e7031951887b03d9 files/libgpg-error-1.3-nls.patch 451
 DIST libgpg-error-1.3.tar.gz 575070 RMD160 3f5cfc4dba2588932d0c3de3700073da750e44be SHA1 6c7425b3634af05a0314287fff7ba13010c4c26a SHA256 d815a1a5445fc26de5c7b10192acb77cf4277a100124842b616f85a5a4fbfe3b
+DIST libgpg-error-1.5.tar.bz2 372516 RMD160 1ba7f27ff1718a26038f48a288d391f08ef3b194 SHA1 1f83d9af8e8ed3bcbf3a5e9018db257dc6336655 SHA256 b31f848408fa99a7e5c4ec134f36ba25ee482642482a92e4e752eba51cbc9e8b
 EBUILD libgpg-error-1.3-r1.ebuild 861 RMD160 af4cbc4bb8eece6b6abda06d8a9355d5ffd5a44d SHA1 e3bc41125a460aace70245203be21b831ac7c06d SHA256 afbb7627ca460c6775b16f43c0f55c30173aec5534d00ab322cc31e3e3add2b0
 MD5 68b6e09699733efcf37ea1822c574e2d libgpg-error-1.3-r1.ebuild 861
 RMD160 af4cbc4bb8eece6b6abda06d8a9355d5ffd5a44d libgpg-error-1.3-r1.ebuild 861
 SHA256 afbb7627ca460c6775b16f43c0f55c30173aec5534d00ab322cc31e3e3add2b0 libgpg-error-1.3-r1.ebuild 861
-MISC ChangeLog 5966 RMD160 8b61d254d6be636312ae6d70ba3e2966784eb065 SHA1 6ab03055322056157710bd13e12e2e241baf4754 SHA256 7e6611be40f0f1890a2fdc17cc2414e45abf6bbc149f09a29b3b3d40d7db7ae8
-MD5 897aaca693148a3074c900d422d1956c ChangeLog 5966
-RMD160 8b61d254d6be636312ae6d70ba3e2966784eb065 ChangeLog 5966
-SHA256 7e6611be40f0f1890a2fdc17cc2414e45abf6bbc149f09a29b3b3d40d7db7ae8 ChangeLog 5966
+EBUILD libgpg-error-1.5.ebuild 818 RMD160 ac4b73b191bf719c05b16b7f7a638423a89ecec0 SHA1 afc8c1b4f30a7dfd9070bd19b96b0fe3da59cc82 SHA256 2db1621919b383552e6e836713dff18c7afe6380d8bbc58a4c145332c6e7ef0a
+MD5 de1564f2d19846932c214a54d1971b38 libgpg-error-1.5.ebuild 818
+RMD160 ac4b73b191bf719c05b16b7f7a638423a89ecec0 libgpg-error-1.5.ebuild 818
+SHA256 2db1621919b383552e6e836713dff18c7afe6380d8bbc58a4c145332c6e7ef0a libgpg-error-1.5.ebuild 818
+MISC ChangeLog 6210 RMD160 7745a7a7c7fd1496b79f33dd441ddfeaef5546fc SHA1 a31b1cfce9d0c27390e31fc9277f815283e91e6d SHA256 19a3f54dc50c05de2d644060919ec0aa1fe10f39aad9805e814201a151f4a07b
+MD5 bc57a6bf1e77fe090c81eb05e5ee8954 ChangeLog 6210
+RMD160 7745a7a7c7fd1496b79f33dd441ddfeaef5546fc ChangeLog 6210
+SHA256 19a3f54dc50c05de2d644060919ec0aa1fe10f39aad9805e814201a151f4a07b ChangeLog 6210
 MISC metadata.xml 250 RMD160 6dcb0cedacaf21e461c4d2636bf573be7d71327e SHA1 790b87b4fb52da89abcd34c02bf1eb607e986fc3 SHA256 d8e12e3cf9acd8a2dd8fefb591273fece4b80f7a93a569274b6d94e84934308b
 MD5 cbb90c3fb885f86a1c6bea0f4493f9ab metadata.xml 250
 RMD160 6dcb0cedacaf21e461c4d2636bf573be7d71327e metadata.xml 250
@@ -18,3 +23,6 @@ SHA256 d8e12e3cf9acd8a2dd8fefb591273fece4b80f7a93a569274b6d94e84934308b metadata
 MD5 782b366d02c098dccad3c94687351855 files/digest-libgpg-error-1.3-r1 250
 RMD160 59754f2d24c6379e378fed1e73f361788581ab06 files/digest-libgpg-error-1.3-r1 250
 SHA256 1a2d78d19f8c850192086954ebe00d2027960f2860590bea5d2583e9a5a7a8e4 files/digest-libgpg-error-1.3-r1 250
+MD5 c23e3b7774297df11ee27531aabb87de files/digest-libgpg-error-1.5 253
+RMD160 3a22ebcb612994e552db05c75d2cff0a26996882 files/digest-libgpg-error-1.5 253
+SHA256 a1628ae2564994f9a3e37b30c2a1ece1be8b4c2de81e917b9999c3f8bb32af30 files/digest-libgpg-error-1.5 253
