@@ -1,0 +1,3 @@
+MD5 8599b96c911b1df1be24a6ff4ec3c364 libgpg-error-1.5.tar.bz2 372516
+RMD160 1ba7f27ff1718a26038f48a288d391f08ef3b194 libgpg-error-1.5.tar.bz2 372516
+SHA256 b31f848408fa99a7e5c4ec134f36ba25ee482642482a92e4e752eba51cbc9e8b libgpg-error-1.5.tar.bz2 372516
