@@ -1,0 +1,35 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/libgpg-error-1.5.ebuild,v 1.1 2006/12/09 08:37:23 alonbl Exp $
+
+EAPI="prefix"
+
+inherit libtool eutils
+
+DESCRIPTION="Contains error handling functions used by GnuPG software"
+HOMEPAGE="http://www.gnupg.org/(en)/download/index.html#libgpg-error"
+SRC_URI="mirror://gnupg/${PN}/${P}.tar.bz2"
+
+LICENSE="GPL-2 LGPL-2.1"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc-macos ~x86"
+IUSE="nls"
+
+RDEPEND="nls? ( virtual/libintl )"
+DEPEND="nls? ( sys-devel/gettext )"
+
+src_unpack() {
+	unpack "${A}"
+	cd "${S}"
+	elibtoolize
+}
+
+src_compile() {
+	econf $(use_enable nls) || die
+	emake || die
+}
+
+src_install() {
+	make install DESTDIR="${D}" || die
+	dodoc AUTHORS ChangeLog NEWS README
+}
