@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/libgpg-error
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.43 2006/10/19 15:37:03 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.45 2006/12/09 08:37:23 alonbl Exp $
+
+*libgpg-error-1.5 (09 Dec 2006)
+
+  09 Dec 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.5.ebuild:
+  Version bump
+
+*libgpg-error-1.4 (29 Oct 2006)
+
+  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.4.ebuild:
+  Version bump
 
   19 Oct 2006; Roy Marples <uberlord@gentoo.org> libgpg-error-1.3-r1.ebuild:
   Added ~sparc-fbsd keyword.
